# JailBreak-Arena

./: Dockerfile  README.md  openenv.yaml  pyproject.toml  report_system-prompt_task_001.html  report_system-prompt_task_005.html  report_system-prompt_task_007.html  report_task_001.html  requirements.txt  test_env.py  test_report.html  test_report.py  test_yaml.py
examples/: audit_my_bot.py  basic_run.py
jailbreak_arena/: attacker.py  cli.py  defender.py  env.py  grader.py  prompts.py  tasks.py  utils.py
jailbreak_arena/adapters/: __init__.py  base.py  bedrock.py  http.py  langchain.py  system_prompt.py
jailbreak_arena/reporters/: html_report.py
tests/: test_grader.py  test_tasks.py
